--- a/wstro-web/pom.xml
+++ b/wstro-web/pom.xml
@@ -60,6 +60,14 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- spring boot 热部署 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <!-- optional=true,依赖不会传递，该项目依赖devtools；之后依赖该项目的项目如果想要使用devtools，需要重新引入 -->
+            <optional>true</optional>  
+            <scope>true</scope>
+        </dependency>
         <!-- apache 工具类 -->
         <dependency>
             <groupId>commons-codec</groupId>
