--- a/wstro-web/pom.xml
+++ b/wstro-web/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <dependencies>
+        <!-- 内部引用 start -->
         <dependency>
             <groupId>com.you.wstro</groupId>
             <artifactId>wstro-entity</artifactId>
@@ -28,6 +29,12 @@
             <groupId>com.you.wstro</groupId>
             <artifactId>wstro-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.you.wstro</groupId>
+            <artifactId>wstro-dao</artifactId>
+        </dependency>
+        <!-- 外部引用 end -->
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -47,12 +54,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-        <!-- mysql连接 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <!-- 消除 Java 的冗长 ,优雅的编程 -->
         <dependency>
