--- a/wstro-web/src/main/resources/application.yml
+++ b/wstro-web/src/main/resources/application.yml
@@ -16,4 +16,15 @@ spring:
       enabled: true
 
 # mybatis配置
+mybatis:
+  # 扫描映射文件
+  mapper-locations:
+  - classpath:mapper/*.xml
+  # 配置扫描包的别名，主要是实体类包
+  type-aliases-package: com.you.wstro.bean
+  # 加载mybatis文件
+  #config-location: classpath:mybatis/mybatis-config.xml
+  # 设置在控制台上打印sql语句
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
         
