TASK----wstro-server添加spring boot mail邮件配置

--- a/wstro-base/pom.xml
+++ b/wstro-base/pom.xml
@@ -20,7 +20,11 @@
   </properties>
   
   <dependencies>
-    
+    <!-- 邮件依赖包 -->
+    <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-starter-mail</artifactId>
+    </dependency>    
   </dependencies>
   
   <build>
