--- a/wstro-server/src/main/resources/application.yml
+++ b/wstro-server/src/main/resources/application.yml
@@ -1,4 +1,17 @@
-server:
-  port: 8081
-  servlet:
-    context-path: /wstro-server
+spring:
+  application: 
+    # 服务名
+    name: wstro-server
+  profiles:
+    # 多环境配置
+    active: local
+  # 设置编码格式
+  http:
+    encoding:
+      # 编码格式
+      charset: UTF-8
+      # 设置forceEncoding
+      force: true
+      # 是否开启
+      enabled: true
+       
