--- a/wstro-web/src/main/resources/application-dev.yml
+++ b/wstro-web/src/main/resources/application-dev.yml
@@ -29,8 +29,67 @@ spring:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
-    
-#  配置日志输出级别
+  # rabbitmq配置
+  rabbitmq:
+    # 服务器ip
+    host: 127.0.0.1
+    # 端口号
+    port: 5672
+    # 用户名
+    username: guest
+    # 密码
+    password: guest
+    # 配置虚拟主机
+    virtual-host: /
+    # 连接超时，单位毫秒
+    connection-timeout: 3000ms
+    # 消息确认机制 --- 是否启用发布确认(默认false），从生产者-->交换器
+    publisher-confirms: true
+    # 消息确认机制 --- 是否启用发布返回（默认false），从交换器-->队列
+    publisher-returns: true
+    # 缓存设置
+    cache:
+      channel:
+        # 缓存中保持的channel数量
+        size: 200
+        # 当缓存数量被设置时，从缓存中获取一个channel的超时时间，单位毫秒；如果为0，则总是创建一个新channel
+        checkout-timeout: 1500ms
+      connection:
+        # 缓存的连接数，只有是CONNECTION模式时生效
+        size: 10
+        # 连接工厂缓存模式：CHANNEL 和 CONNECTION
+        mode: CONNECTION
+    template:
+      # 消息确认机制 --- 启用强制信息；默认false
+      #1.当mandatory标志位设置为true时，
+      #   如果exchange根据自身类型和消息routingKey无法找到一个合适的queue存储消息，
+      #   那么broker会调用basic.return方法将消息返还给生产者;
+      #2.当mandatory设置为false时，出现上述情况broker会直接将消息丢弃;
+      #   通俗的讲，mandatory标志告诉broker代理服务器至少将消息route到一个队列中，
+      #   否则就将消息return给发送者;
+      mandatory: true
+      retry:
+        # 启用发送重试
+        enabled: true
+        # 最大重试次数
+        max-attempts: 3
+    # 消费者配置
+    listener:
+      simple:
+        # 消息确认机制 --- manual手动确认
+        acknowledge-mode: manual    # 表示消息确认方式，其有三种配置方式，分别是none、manual和auto；默认auto
+        # 最小消费者数量
+        concurrency: 5
+        # 最大消费者数量
+        max-concurrency: 20
+        # 消费者每次从队列获取的消息数量
+        prefetch: 15
+        retry:
+          # 启用监听重试
+          enabled: true
+          # 最大重试次数
+          max-attempts: 3
+# 配置日志输出级别
 logging:
   # 指定logback配置文件的位置 
   config: classpath:logback-spring.xml
