TASK---配置rabbitadmin组件，并实现交换器的创建

--- a/wstro-base/pom.xml
+++ b/wstro-base/pom.xml
@@ -20,6 +20,17 @@
   </properties>
   
   <dependencies>
+    <!-- 内部引用 start -->
+        <dependency>
+            <groupId>com.you.wstro</groupId>
+            <artifactId>wstro-entity</artifactId>
+        </dependency>
+    <!-- 外部引用 end -->
+    <!-- rabbitMQ -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
     <!-- 邮件依赖包 -->
     <dependency>
        <groupId>org.springframework.boot</groupId>
