--- a/wstro-web/src/main/resources/application-dev.yml
+++ b/wstro-web/src/main/resources/application-dev.yml
@@ -26,7 +26,8 @@ spring:
   datasource:
     # JDBC连接Mysql6以上com.mysql.cj.jdbc.Driver
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    #url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
   # rabbitmq配置
