--- a/wstro-base/pom.xml
+++ b/wstro-base/pom.xml
@@ -42,6 +42,11 @@
         <artifactId>lombok</artifactId>
         <optional>true</optional>
     </dependency>
+    <!-- fastjson依赖包 -->
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+    </dependency>
   </dependencies>
   
   <build>
