--- a/wstro-web/pom.xml
+++ b/wstro-web/pom.xml
@@ -16,7 +16,7 @@
   </parent>
   <properties>
         <!-- 指定该Main Class为全局的唯一入口 -->
-        <start-class>com.you.StartSpringBootApplication</start-class>
+        <start-class>com.you.wstro.WstroApplication</start-class>
     </properties>
 
     <dependencies>
