TASK----添加阿里巴巴的durid数据库源

--- a/wstro-dao/pom.xml
+++ b/wstro-dao/pom.xml
@@ -19,15 +19,15 @@
   </properties>
   
   <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- 内部引用 start -->
         <dependency>
             <groupId>com.you.wstro</groupId>
             <artifactId>wstro-entity</artifactId>
-        </dependency>
-        <!-- druid依赖 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
         </dependency>
         <!-- mybatis 依赖包 -->
         <dependency>
@@ -35,12 +35,16 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
         <!-- 外部引用 end -->
-        
         <!-- mysql连接 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency>
+         <!-- druid依赖 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
   </dependencies>
   
