--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,11 @@
         <java.version>1.8</java.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <fastjson.version>1.2.56</fastjson.version>
-        <druid.version>1.1.21</druid.version>
+        <!-- druid数据库连接池依赖版本 -->
+        <druid.version>1.1.22</druid.version>
         <commons-io.version>2.6</commons-io.version>
-        <mybatis.version>2.1.1</mybatis.version>
+        <!-- spring boot mybatis版本号 -->
+        <mybatis.version>2.1.3</mybatis.version>
         <!-- swagger2依赖包版本号 -->
         <swagger2.version>2.9.2</swagger2.version>
         <!-- swagger-bootstrap-ui依赖包版本号 -->
@@ -108,7 +110,7 @@
 	        <!--引入自定义的数据源-->
 	        <dependency>
 	            <groupId>com.alibaba</groupId>
-	            <artifactId>druid</artifactId>
+	            <artifactId>druid-spring-boot-starter</artifactId>
 	            <version>${druid.version}</version>
 	        </dependency>
 	        <!-- apache 工具类 -->
