--- a/wstro-web/pom.xml
+++ b/wstro-web/pom.xml
@@ -64,6 +64,11 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- 消除 Java 的冗长 ,优雅的编程 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
